@@ -297,6 +297,9 @@ Changes for APR 2.0.0
   *) apr_proc_create(): Fix potential handle leak when apr_proc_create() is used
      from multiple threads on Windows [Ivan Zhakov]
 
+  *) apr_proc_create(): Check that progname argument is quoted correctly if
+     it's quoted on Windows. [Ivan Zhakov]
+
 Changes for APR and APR-util 1.7.x and later:
 
   *) http://svn.apache.org/viewvc/apr/apr/branches/1.7.x/CHANGES?view=markup
